Fix price alignment

--- a/css/site.css
+++ b/css/site.css
@@ -46,7 +46,7 @@ body {
 
 #price h1 {
   font-size: 12px;
-  line-height: 60px;
+  line-height: 40px;
   top: 19px;
   vertical-align: bottom;
   text-transform: uppercase;
